--- a/src/app/card/card.page.html
+++ b/src/app/card/card.page.html
@@ -1,12 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      Card Page
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <button [routerLink]="'/tabs/card/cardDetail'">Navigate to Detail Page!!!!</button>
+
     <ion-card class="welcome-card">
       <ion-img src="/assets/shapes.svg"></ion-img>
       <ion-card-header>
